Blackpurl/src/objects/Cash_Reconciliation__c.object
<CustomObject>
    <fields>
        <fullName>Commit_Reconciliation_Date__c</fullName>
        <label>Commit Reconciliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Date__c</fullName>
        <label>Reconciliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unreconciled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <label>Total Actual</label>
        <summarizedField>Cash_Reconciliation_Payment__c.Actual_Amount__c</summarizedField>
        <summaryForeignKey>Cash_Reconciliation_Payment__c.Cash_Reconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cash Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cash Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>